added skills content

--- a/index.html
+++ b/index.html
@@ -55,6 +55,37 @@
                 </div>
             </div>
         </section>
+        <!-- What I do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, facere dicta. Repellat vitae quidem accusamus?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">Neque quas laudantium ad pariatur facere voluptatibus veritatis, maxime alias itaque reprehenderit deserunt nam molestias?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">Et expedita quibusdam beatae error assumenda ducimus, hic eveniet rem voluptatibus deleniti molestias officiis tenetur.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">Nobis, quidem esse voluptatibus saepe porro sint quos illum modi facere, rem eaque omnis recusandae.</p>
+                </div>
+            </div>
+        </section>
+        <!-- My resume section -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+        </section>
     </main>
     <footer>
 
